force-app/main/default/objects/Section__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Execution__c.Department__c</field>
            <operation>equals</operation>
            <valueField>$Source.Department__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Execution__c</referenceTo>
    <relationshipLabel>Sections</relationshipLabel>
    <relationshipName>Sections</relationshipName>
    <type>Lookup</type>
</CustomField>