force-app/main/default/objects/Section__c/fields/General_Produced__c.field-meta.xml
<CustomField>
    <fullName>General_Produced__c</fullName>
    <label>General Produced</label>
    <summarizedField>Task__c.General_Produced__c</summarizedField>
    <summaryForeignKey>Task__c.Section__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>