force-app/main/default/objects/Section__c/fields/General_Time_Spent__c.field-meta.xml
<CustomField>
    <fullName>General_Time_Spent__c</fullName>
    <label>General Time Spent</label>
    <summarizedField>Task__c.General_Time_Spent__c</summarizedField>
    <summaryForeignKey>Task__c.Section__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>