force-app/main/default/objects/Section__c/fields/Subsection__c.field-meta.xml
<CustomField>
    <fullName>Subsection__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Subsection for</label>
    <referenceTo>Section__c</referenceTo>
    <relationshipLabel>Subsections</relationshipLabel>
    <relationshipName>Subsections</relationshipName>
    <type>Lookup</type>
</CustomField>