force-app/main/default/objects/Section__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Subsection__c</columns>
    <columns>General_Produced__c</columns>
    <columns>General_Time_Spent__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>